// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel component AIRBNB channel image should match snapshot 1`] = `
<div>
  <img
    alt="AIRBNB"
    src="AIRBNB.svg"
  />
</div>
`;

exports[`Channel component BOOKINGCOM channel image should match snapshot 1`] = `
<div>
  <img
    alt="BOOKINGCOM"
    src="BOOKINGCOM.svg"
  />
</div>
`;

exports[`Channel component HOLIDU channel image should match snapshot 1`] = `
<div>
  <img
    alt="HOLIDU"
    src="HOLIDU.svg"
  />
</div>
`;
